--- a/src/styles/eventslider.css
+++ b/src/styles/eventslider.css
@@ -1,3 +1,7 @@
+.slick-dots {
+    margin-bottom: 2rem !important;
+}
+
 li.slick-active > button::before {
     color: #ff2a70 !important;
 }
@@ -5,4 +9,10 @@ li.slick-active > button::before {
 .slick-dots li button::before {
     color: white;
     opacity: 1;
+}
+
+.slick-arrow,
+.slick-prev,
+.slick-next {
+    display: none !important;
 }
